quickstart/go-app-k8s-demo/app-dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-app-go
  template:
    metadata:
      labels:
        app: go-app-go
    spec:
      containers:
        - name: go-go-app-container
          image: registry.cn-hangzhou.aliyuncs.com/docker-study-lab/simple-go-app-go:v0.2
          resources:
            limits:
              memory: "50Mi"
              cpu: "50m"
          ports:
            - containerPort: 8080
